# Vertex

./: .gitignore  CMakeLists.txt  README.md
docs/: movement-bugs.md  tuning-guide.md
src/: Engine.cpp  Engine.hpp  GameLoop.cpp  GameLoop.hpp  main.cpp
src/entity/: Entity.hpp  Player.cpp  Player.hpp
src/game/: GameWorld.cpp  GameWorld.hpp  Obstacle.hpp
src/input/: Command.hpp  CommandQueue.cpp  CommandQueue.hpp  IdleCommand.cpp  IdleCommand.hpp  InputHandler.cpp  InputHandler.hpp  JumpCommand.cpp  JumpCommand.hpp  MoveLeftCommand.cpp  MoveLeftCommand.hpp  MoveRightCommand.cpp  MoveRightCommand.hpp
src/physics/: PhysicsEngine.cpp  PhysicsEngine.hpp  Vector2.hpp
src/renderer/: BackBuffer.cpp  BackBuffer.hpp  Renderer.cpp  Renderer.hpp  Sprite.hpp
src/state/: IdleState.cpp  IdleState.hpp  JumpingState.cpp  JumpingState.hpp  PlayerState.hpp  RunningState.cpp  RunningState.hpp
tests/: PhysicsEngineTests.cpp  StateTransitionTests.cpp
